# pytest-mypy-testing

./: .bumpversion.cfg  .bumpversion.cfg.license  .editorconfig  .flake8  .gitattributes  .gitignore  .isort.cfg  LICENSE  README.md  constraints.in  constraints.txt  lock-requirements.sh  lock_requirements.sh  mypy.ini  mypy39.ini  pyproject.toml  pytest.ini  requirements.in  requirements.txt  tasks.py  tox.ini
.github/workflows/: pythonpackage.yml
mypy_tests/: test_mypy_tests_in_test_file.py
src/pytest_mypy_testing/: __init__.py  message.py  output_processing.py  parser.py  plugin.py  strutil.py
tests/: conftest.py  test___init__.py  test_basics.mypy-testing  test_file_with_nonitem_messages.mypy-testing  test_message.py  test_mypy_tests.mypy  test_mypy_tests_with_nonitem.mypy  test_output_processing.py  test_parser.py  test_plugin.py  test_strutil.py
