# SPDX-FileCopyrightText: David Fritzsche
# SPDX-License-Identifier: CC0-1.0

[build-system]
requires = ["dflit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pytest_mypy_testing"
author = "David Fritzsche"
author-email = "david.fritzsche@mvua.de"
classifiers = [
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
description-file = "README.md"
dist-name = "pytest-mypy-testing"
home-page = "https://github.com/davidfritzsche/pytest-mypy-testing"
license = "Apache-2.0 OR MIT"
requires = [
    "pytest>=7,<9",
    "mypy>=1.0",
]
requires-python = ">=3.7"

[tool.flit.entrypoints.pytest11]
mypy-testing = "pytest_mypy_testing.plugin"

[tool.flit.sdist]
include = ["src/pytest_mypy_testing/_version.py"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
(
    /_version\.py
  | /dist/
)
'''

[tool.coverage.run]
include = [
    'src/*',
    'mypy_tests/*',
    'tests/*',
]
data_file = 'build/coverage-data/coverage'
parallel = true
