# SPDX-FileCopyrightText: David Fritzsche
# SPDX-License-Identifier: CC0-1.0

[build-system]
requires = ["flit_core >=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pytest-mypy-testing"
description = "Pytest plugin to check mypy output"
authors = [
  {name = "David Fritzsche", email = "david.fritzsche@mvua.de"},
]
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0 OR MIT"
license-files = ["LICENSES/*"]
keywords = ["pytest", "mypy"]
classifiers = [
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "pytest>=7",
    "mypy>=1.0",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/davidfritzsche/pytest-mypy-testing"

[project.entry-points.pytest11]
mypy-testing = "pytest_mypy_testing.plugin"



[tool.flit.sdist]
include = ["src/pytest_mypy_testing/_version.py"]



[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
(
    /_version\.py
  | /dist/
)
'''



[tool.coverage.run]
include = [
    'src/*',
    'mypy_tests/*',
    'tests/*',
]
data_file = 'build/coverage-data/coverage'
parallel = true



[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
